src/test/resources/30/single/xhtml/valid/entities-internal.xhtml
<?xml version="1.0" standalone="yes" ?>
<!DOCTYPE html [
  <!ENTITY foo "foo">
]>
<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
    <head>
        <title>Test</title>
    </head>
    <body>
        <!-- entity declarations are not allowed -->
        &foo; 
    </body>
</html>
