src/test/resources/30/single/xhtml/invalid/obsolete-pubdate.xhtml
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
  <head lang="en">
    <meta charset="UTF-8"/>
    <title>Document</title>
  </head>
  <body>
    <time pubdate="">2009-08-21T23:44Z</time>
  </body>
</html>